name:                kask-base
version:             0.1.0.0
synopsis:            A collection of commmon utilities
description:         Contains common utilities to be shared among
                     misc. other projects.
homepage:            https://github.com/kongra/kask-base
license:             BSD3
license-file:        LICENSE
author:              Konrad Grzanek
maintainer:          kongra@gmail.com
copyright:           (c) Konrad Grzanek 2014
category:            Common utils
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  ghc-options:       -O2 -W -Wall -Werror -funbox-strict-fields
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs

  exposed-modules:   Kask.Control.Monad
                     Kask.Data.Function
                     Kask.Data.List
                     Kask.Data.Sequence
  -- other-modules:
  other-extensions:  Safe
  build-depends:     base >=4.7 && <4.8,
                     containers >= 0.5.5.1
  -- hs-source-dirs:
  default-language:  Haskell2010