name:                kask-base
version:             0.1.0.0
synopsis:            A collection of commmon utilities
description:         Contains common utilities to be shared among
                     misc. other projects.
homepage:            https://github.com/kongra/kask-base
license:             BSD3
license-file:        LICENSE
author:              Konrad Grzanek
maintainer:          kongra@gmail.com
copyright:           (c) Konrad Grzanek 2014
category:            Common utils
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  ghc-options:       -O2 -W -Wall
                     -Wincomplete-uni-patterns
                     -Wincomplete-record-updates
                     -Wmissing-signatures
                     -Widentities
                     -funbox-strict-fields
  if impl(ghc >= 6.8)
    ghc-options:     -fwarn-tabs

  exposed-modules:   Kask.Control.Monad
                     Kask.Control.Lens
                     Kask.Data.Function
                     Kask.Data.List
                     Kask.Data.Sequence
                     Kask.Data.Tree.Print
                     Kask.Data.Tree.Search
  -- other-modules:
  other-extensions:  Safe
  build-depends:     base         >= 4.9
                   , containers   >= 0.5.7.1
                   , transformers >= 0.5.2.0
                   , mtl          >= 2.2.1
  -- hs-source-dirs:
  default-language:  Haskell2010
