name:                kask
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/kongra/kask#readme
license:             BSD3
license-file:        LICENSE
author:              Konrad Grzanek
maintainer:          kongra@gmail.com
copyright:           (c) 2016-present Konrad Grzanek
category:            Research
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Kask.Control.Monad
                       Kask.Control.Lens
                       Kask.Data.Function
                       Kask.Data.List
                       Kask.Data.Sequence
                       Kask.Data.Tree.Print
                       Kask.Data.Tree.Search
                       Kask.Logic.Kleene
                       Kask.Text
                       Kask.Time

  build-depends:       base >= 4.7 && < 5
                     , containers
                     , transformers
                     , mtl
                     , clock
                     , text

  default-language:    Haskell2010

executable kask-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , clock
                     , text
                     , kask
  default-language:    Haskell2010

test-suite kask-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , clock
                     , text
                     , kask
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kongra/kask
