name:                  kask
version:               0.1.0.0
synopsis:              Initial project template from stack
description:           Please see README.md
homepage:              https://github.com/kongra/kask#readme
license:               BSD3
license-file:          LICENSE
author:                Konrad Grzanek
maintainer:            kongra@gmail.com
copyright:             (c) 2016-present Konrad Grzanek
category:              Research
build-type:            Simple
-- extra-source-files:
cabal-version:         >= 1.10

library
  ghc-options:         -O2 -W -Wall -Werror
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-record-updates
                       -funbox-strict-fields
                       -fwarn-tabs
                       -- -fllvm

  hs-source-dirs:      src
  exposed-modules:     Kask.Constr
                       Kask.Control.Lens
                       Kask.Control.Monad
                       Kask.Data.Array.MArray
                       Kask.Data.BitSet.Muss
                       Kask.Data.Function
                       Kask.Data.List
                       Kask.Data.Sequence
                       Kask.Data.Tree.Print
                       Kask.Data.Tree.Search
                       Kask.Logic.Kleene
                       Kask.Math
                       Kask.Print
                       Kask.Text
                       Kask.Time

  build-depends:       base >= 4.7 && < 5
                     , array
                     , async
                     , bytestring
                     , clock
                     , containers
                     , deepseq
                     , hashable
                     , mtl
                     , text
                     , transformers
                     , unordered-containers

  default-language:    Haskell2010

executable kask-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:
                       Test001
                       Test002
                       Test003
                       Test004
                       Test005
                       Test006
                       Test007
                       Test008

  ghc-options:         -O2 -W -Wall -Werror
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-record-updates
                       -funbox-strict-fields
                       -fwarn-tabs
                       -- -fllvm
                       -threaded -rtsopts -with-rtsopts=-N

  build-depends:       base
                     , kask
                     , text
  default-language:    Haskell2010

test-suite kask-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , kask

  ghc-options:         -O0 -W -Wall
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-record-updates
                       -funbox-strict-fields
                       -fwarn-tabs
                       -- -fllvm
                       -threaded -rtsopts -with-rtsopts=-N

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kongra/kask
