name:                  kask
version:               0.1.0.0
synopsis:              Initial project template from stack
description:           Please see README.md
homepage:              https://github.com/kongra/kask#readme
license:               BSD3
license-file:          LICENSE
author:                Konrad Grzanek
maintainer:            kongra@gmail.com
copyright:             (c) 2016-present Konrad Grzanek
category:              Research
build-type:            Simple
-- extra-source-files:
cabal-version:         >= 1.10

library
  ghc-options:         -O2 -W -Wall
                       -fllvm -optlo-O3
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-record-updates
                       -funbox-strict-fields
                       -fwarn-tabs

  hs-source-dirs:      src
  exposed-modules:     Kask.Constr
                       Kask.Control.Lens
                       Kask.Control.Monad
                       Kask.Data.Array.MArray
                       Kask.Data.BitSet.Muss
                       Kask.Data.Function
                       Kask.Data.List
                       Kask.Data.Sequence
                       Kask.Data.Tree.Print
                       Kask.Data.Tree.Search
                       Kask.Logic.Kleene
                       Kask.Math
                       Kask.Print
                       Kask.Text
                       Kask.Time

  build-depends:       base >= 4.7 && < 5
                     , array
                     , async
                     , bytestring
                     , clock
                     , containers
                     , deepseq
                     , hashable
                     , mtl
                     , rio
                     , text
                     , transformers
                     , unordered-containers

  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , BinaryLiterals
                     , ConstraintKinds
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveTraversable
                     , DoAndIfThenElse
                     , EmptyDataDecls
                     , ExistentialQuantification
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NamedFieldPuns
                     , NoImplicitPrelude
                     , OverloadedStrings
                     , PartialTypeSignatures
                     , PatternGuards
                     , PolyKinds
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeFamilies
                     , TypeSynonymInstances
                     , ViewPatterns

executable kask-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Test001
                       Test003
                       Test005
                       Test006
                       Test007
                       Test008
                       Test009
                       Test010
                       Test011
                       Test012

  ghc-options:         -O2 -W -Wall
                       -fllvm -optlo-O3
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-record-updates
                       -funbox-strict-fields
                       -fwarn-tabs
                       -threaded -rtsopts -with-rtsopts=-N

  build-depends:       base
                     , kask
                     , text
                     , bytestring
                     , containers
                     , rio
                     , unordered-containers
                     , criterion

  default-language:    Haskell2010

  default-extensions:  BangPatterns
                     , BinaryLiterals
                     , ConstraintKinds
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveTraversable
                     , DoAndIfThenElse
                     , EmptyDataDecls
                     , ExistentialQuantification
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NamedFieldPuns
                     , NoImplicitPrelude
                     , OverloadedStrings
                     , PartialTypeSignatures
                     , PatternGuards
                     , PolyKinds
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeFamilies
                     , TypeSynonymInstances
                     , ViewPatterns

test-suite kask-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , kask
                     , rio

  ghc-options:         -O0 -W -Wall
                       -fllvm
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-record-updates
                       -funbox-strict-fields
                       -fwarn-tabs
                       -threaded -rtsopts -with-rtsopts=-N

  default-language:    Haskell2010

  default-extensions:  BangPatterns
                     , BinaryLiterals
                     , ConstraintKinds
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveTraversable
                     , DoAndIfThenElse
                     , EmptyDataDecls
                     , ExistentialQuantification
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NamedFieldPuns
                     , NoImplicitPrelude
                     , OverloadedStrings
                     , PartialTypeSignatures
                     , PatternGuards
                     , PolyKinds
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeFamilies
                     , TypeSynonymInstances
                     , ViewPatterns

source-repository head
  type:     git
  location: https://github.com/kongra/kask
